# slackroll

./: .gitattributes  .gitignore  .pre-commit-config.yaml  COPYING  Makefile  README  asciidoc.conf  doc-faq.txt  doc-general-description.txt  doc-html-faq.txt  doc-html-operations.txt  doc-html-tutorial.txt  doc-index.txt  doc-manpage-faq.txt  doc-manpage-general.txt  doc-manpage-operations.txt  doc-manpage-synopsis.txt  doc-manpage-tutorial.txt  doc-operations.txt  doc-tutorial.txt  docinfo.html  faq-asciidoc.html  faq-asciidoc.txt  faq.html  faq.php  faq.textile  faq.txt  generate  generate-doc  home-tutorial.textile  home.textile  index.html  index.txt  manpage.txt  operations-guide.html  operations-guide.php  operations-guide.textile  operations.txt  pyproject.toml  slackroll  (+11 more)
.github/: dependabot.yml
.github/workflows/: ci.yml
data/: py2_blacklist.db  py2_changelog.db  py2_changelog_non_ascii.db  py2_manifestlist.db  py2_persistent.db  py2_repos.db
helpfiles/: 00-default.txt  add-repo.txt  all.txt  batch.txt  blacklist-add.txt  blacklist-del.txt  broken-symlinks.txt  changelog-entries.txt  changelog.txt  clean-cache.txt  dotnew.txt  download-changelog.txt  download-key-packages.txt  download-new.txt  download-path.txt  download-upgrades.txt  download.txt  erase-all.txt  erase-cache.txt  erase-tmp.txt  foreign.txt  freeze.txt  frozen.txt  full-changelog.txt  import-key.txt  info-new.txt  info-path.txt  info.txt  install-foreign.txt  install-new.txt  install-path.txt  install.txt  installed.txt  kernel-clean.txt  kernel-upgrade.txt  list-all.txt  list-alternatives.txt  list-changelog.txt  list-foreign.txt  list-frozen.txt  (+50 more)
tests/: __init__.py  conftest.py  test_blacklist_management.py  test_concat.py  test_load_persistent_db.py  test_prioritised_pkgs.py  test_self_file_version.py  test_serialise_deserialise.py  test_verify_num_args.py  test_version.py
