[tool.poetry]
name = "slackroll"
version = "50"
description = "Package or upgrade manager for Slackware Linux"
authors = ["Ricardo Garcia <commits@rg3.name>", "Andrew Clemons <andrew.clemons@gmail.com>"]
license = "CC0 Public Domain Dedication"

[tool.poetry.dependencies]
future = {version = "0.18.3", python = "^2.7"}
python = "^2.7 || ^3.9"

[tool.poetry.dev-dependencies]
mock = [
  {version = "3.0.5", python = "^2.7"}
]
pytest = [
  {version = "~4.6", python = "^2.7"},
  {version = "^7.1.2", python = "^3.9"}
]
pytest-cov = [
  {version = "2.12.1", python = "^2.7"},
  {version = "^4.0.0", python = "^3.9"}
]
more-itertools = {version = "~5.0", python = "^2.7"}
toml = "^0.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
typeCheckingMode = "basic"
useLibraryCodeForTypes = true
