[tool.poetry]
name = "slackroll"
version = "55"
description = "Package or upgrade manager for Slackware Linux"
authors = ["Ricardo Garcia <commits@rg3.name>", "Andrew Clemons <andrew.clemons@gmail.com>"]
license = "CC0 Public Domain Dedication"

[tool.poetry.dependencies]
python = "~2.7 || ~3.9"

[tool.poetry.dev-dependencies]
mock =  [{ version = "3.0.5", python = "~2.7" }]
pytest = [{ version = "4.6.11", python = "~2.7"}, {version = "8.3.2", python = "~3.9"}]
pytest-cov = [{ version = "2.12.1", python = "~2.7"}, {version = "5.0.0", python = "~3.9"}]
toml = "0.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
